--- a/HTML/SQLManager/SelectWithSQLManager.html
+++ b/HTML/SQLManager/SelectWithSQLManager.html
@@ -10,15 +10,15 @@
   <meta name="keywords" content="LJC, C#, Code, Tutorial">
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width initial-scale=1' />
-  <link rel='stylesheet' type='text/css' href='../CSS/CodeDoc.css' />
-  <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/Syntax.css' />
 </head>
 <body>
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../index.html">Home</a>
-      / <a href="Tutorials.html">HowTo</a>
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
       / SQLManagerSelect
     </div>
     <br />
