--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -27,38 +27,42 @@
       <h4>General Topics</h4>
       <p>
         How to use the
-        <a href="HowToUseLJCProjects.html">LJCProjects</a> code.
+        <a href="General/HowToUseLJCProjects.html">LJCProjects</a> code.
       </p>
       <p>
-        How to add <a href="AddCustomControls.html">LJC Custom Controls</a> to the ToolBox.
+        How to add <a href="General/AddCustomControls.html">LJC Custom Controls</a> to the ToolBox.
       </p>
 
       <h4>DataAccess</h4>
       <p>
         How to Configure DataAccess connection string using
-        <a href="ConfigDataAccessWithBuilder.html">DbConnectionStringBuilder</a>.
+        <a href="DataAccess/ConfigDataAccessWithBuilder.html">DbConnectionStringBuilder</a>.
       </p>
       <p>
         How to Configure DataAccess using
-        <a href="ConfigDataAccessWithConfigs.html">DataConfigs</a>.
+        <a href="DataAccess/ConfigDataAccessWithConfigs.html">DataConfigs</a>.
       </p>
       <p>
         How to add DataTable Rows to an LJCDataGrid using
-        <a href="AddDataRowsToGrid.html">TableData</a>.
+        <a href="DataAccess/AddDataRowsToGrid.html">TableData</a>.
+      </p>
+      <p>
+        How to get a <a href="DataAccess/GetRowObject.html">Data Object</a>
+        from an LJCGridRow.
       </p>
 
       <h4>SQLManager</h4>
       <p>
         How to select data using
-        <a href="SelectWithSQLManager.html">SQLManager</a>.
+        <a href="SQLManager/SelectWithSQLManager.html">SQLManager</a>.
       </p>
       <p>
         How to update data using
-        <a href="UpdateWithKeys.html">Keys</a>.
+        <a href="SQLManager/UpdateWithKeys.html">Keys</a>.
       </p>
       <p>
         How to update data using
-        <a href="UpdateWithFilters.html">Filters</a>.
+        <a href="SQLManager/UpdateWithFilters.html">Filters</a>.
       </p>
     </div>
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
