--- a/HTML/DataAccess/AddDataRowsToGrid.html
+++ b/HTML/DataAccess/AddDataRowsToGrid.html
@@ -10,15 +10,15 @@
   <meta name="keywords" content="LJC, C#, Code, Tutorial">
   <meta name='author' content='Lester J. Clark' />
   <meta name='viewport' content='width=device-width initial-scale=1' />
-  <link rel='stylesheet' type='text/css' href='../CSS/CodeDoc.css' />
-  <link rel='stylesheet' type='text/css' href='../CSS/Syntax.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../../CSS/Syntax.css' />
 </head>
 <body>
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="../index.html">Home</a>
-      / <a href="Tutorials.html">HowTo</a>
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
       / AddGridDataRows
     </div>
     <br />
@@ -72,8 +72,7 @@
       <span class='comment'>// Create Grid Columns from DataTable.Columns.</span>
       sql = "select * from Province";
       dataTable = dataAccess.GetSchemaOnly(sql);
-      <span class='commonType'>var</span> dataColumns = TableData.DataColumnsClone(dataTable);
-      <span class='commonType'>var</span> dataDefinition = TableData.GetDbColumns(dataColumns);
+      <span class='commonType'>var</span> dataDefinition = TableData.GetDbColumns(dataTable.Columns);
       <span class='commonType'>var</span> propertyNames = <span class='keyWord'>new</span> <span class='userType'>List</span><string>()
       {
         { "Name" },
