--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class='Text'>
       <p>Lester J. Clark C# Projects</p>
       <p>
-        <a href="HTML/Tutorials.html">LJCProjects "How To..."</a> 
+        LJCProjects <a href="HTML/Tutorials.html">"How To..."</a> 
       </p>
       <p>
         The LJC Libraries, Utilities and Application source code is in GitHub at
