--- a/HTML/DataAccess/GetRowObject.html
+++ b/HTML/DataAccess/GetRowObject.html
@@ -27,10 +27,14 @@
     </div>
     <div class='Text'>
       <p>
+        How to Configure DataAccess with <a href="ConfigDataAccessWithBuilder.html">ConnectionBuilder</a>.</br />
+        How to Configure DataAccess with <a href="ConfigDataAccessWithConfigs.html">DataConfigs</a>.
+      </p>
+      <p>
         The Data Object associated with a grid row can be retrieved if the
         columns contain a unique key.
       </p>
-  <pre class="code">
+      <pre class="code">
 <span class='modifier'>internal</span> <span class='commonType'>void</span> GetRowDataObject(<span class="userType">DataAccess</span> dataAccess
   , <span class="userType">LJCGridRow</span> ljcGridRow)
 {
