--- a/HTML/DataAccess/AddDataRowsToGrid.html
+++ b/HTML/DataAccess/AddDataRowsToGrid.html
@@ -27,6 +27,10 @@
     </div>
     <div class='Text'>
       <p>
+        How to Configure DataAccess with <a href="ConfigDataAccessWithBuilder.html">ConnectionBuilder</a>.</br />
+        How to Configure DataAccess with <a href="ConfigDataAccessWithConfigs.html">DataConfigs</a>.
+      </p>
+      <p>
         The LJCDataGrid can be populated with DataTable Rows. It uses a helper
         class LJCGridDataLib.TableData.
       </p>
@@ -36,20 +40,8 @@
 <span class='keyWord'>using</span> LJCGridDataLib;
 <span class='keyWord'>using</span> LJCWinFormControls;
 
-<span class='modifier'>internal</span> <span class='commonType'>void</span> DataRetrieve(<span class='userType'>LJCDataGrid</span> ljcGrid)
+<span class='modifier'>internal</span> <span class='commonType'>void</span> DataRetrieve(<span class="userType">DataAccess</span> dataAccess, <span class='userType'>LJCDataGrid</span> ljcGrid)
 {
-  <span class='comment'>// Configure DataAccess using internal configuration.</span>
-  DbConnectionStringBuilder connectionBuilder;
-  connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
-  {
-    { <span class='text'>"Source"</span>, <span class='text'>"DataServiceName"</span> },
-    { <span class='text'>"Initial Catalog"</span>, <span class='text'>"DatabaseName"</span> },
-    { <span class='text'>"Integrated Security"</span>, "True" }
-  };
-  <span class='commonType'>var</span> connectionString = connectionBuilder.ConnectionString;
-  <span class='commonType'>var</span> providerName = <span class='text'>"System.Data.SqlClient"</span>;
-  <span class='commonType'>var</span> dataAccess = <span class='keyWord'>new</span> <span class='userType'>DataAccess</span>(connectionString, providerName);
-
   <span class='comment'>// Configure GridColumns.</span>
   DataTable dataTable;
   DbColumns gridColumns = <span class='keyWord'>null</span>;
@@ -72,14 +64,14 @@
       <span class='comment'>// Create Grid Columns from DataTable.Columns.</span>
       sql = <span class='text'>"select * from Province"</span>;
       dataTable = dataAccess.GetSchemaOnly(sql);
-      <span class='commonType'>var</span> dataDefinition = <span class="userType">TableData</span>.GetDbColumns(dataTable.Columns);
+      <span class='commonType'>var</span> baseDefinition = <span class="userType">TableData</span>.GetDbColumns(dataTable.Columns);
       <span class='commonType'>var</span> propertyNames = <span class='keyWord'>new</span> <span class='userType'>List</span><string>()
       {
         { <span class='text'>"Name"</span> },
         { <span class='text'>"Description"</span> },
         { <span class='text'>"Abbreviation"</span> }
       };
-      gridColumns = dataDefinition.LJCGetColumns(propertyNames);
+      gridColumns = baseDefinition.LJCGetColumns(propertyNames);
       <span class='keyWord'>break</span>;
   }
   ljcGrid.LJCAddColumns(gridColumns);
