--- a/HTML/SQLManager/UpdateWithKeys.html
+++ b/HTML/SQLManager/UpdateWithKeys.html
@@ -27,6 +27,8 @@
     </div>
     <div class='Text'>
       <p>
+        How to Configure DataAccess with <a href="ConfigDataAccessWithBuilder.html">ConnectionBuilder</a>.</br />
+        How to Configure DataAccess with <a href="ConfigDataAccessWithConfigs.html">DataConfigs</a>.
       </p>
 
       <pre class="code">
@@ -36,18 +38,8 @@
 <span class='keyWord'>using</span> LJCWinFormControls;
 
 <span class='comment'>// Updating data with Keys using the SQLManager object.</span>
-<span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithKeys(Province province)
+<span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithKeys(Province province, <span class="commonType">string</span> connectionString, <span class="commonType">string</span> providerName)
 {
-  <span class='comment'>// Create Data Configuration values.</span>
-  <span class='commonType'>var</span> connectionBuilder = <span class='keyWord'>new</span> <span class='userType'>DbConnectionStringBuilder</span>()
-  {
-    { <span class='text'>"Data Source"</span>, <span class='text'>"DataServerName"</span> },
-    { <span class='text'>"Initial Catalog"</span>, <span class='text'>"DatabaseName"</span> },
-    { <span class='text'>"Integrated Security"</span>, <span class='text'>"True"</span> }
-  };
-  <span class='commonType'>var</span> connectionString = connectionBuilder.ConnectionString;
-  <span class='commonType'>var</span> providerName = <span class='text'>"System.Data.SqlClient"</span>;
-
   <span class='comment'>// Create the SQLManager.</span>
   <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, "Province", connectionString
     , providerName);
