--- a/HTML/SQLManager/SelectWithSQLManager.html
+++ b/HTML/SQLManager/SelectWithSQLManager.html
@@ -59,7 +59,7 @@ See the Technical Documentation for more information.</pre>
   <span class="userType">Province</span> retValue;
 
   <span class='comment'>// Create the SQLManager.</span>
-  <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, "Province", connectionString
+  <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, <span class='text'>"Province"</span>, connectionString
     , providerName);
 
   <span class='comment'>// Identify the records and properties to be selected.</span>
