--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -64,6 +64,10 @@
         How to update data using
         <a href="SQLManager/UpdateWithFilters.html">Filters</a>.
       </p>
+      <p>
+        How to retrieve data using
+        <a href="SQLManager/RetrieveWithSavedValues.html">Row Saved Values</a>.
+      </p>
     </div>
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
