--- a/HTML/SQLManager/UpdateWithKeys.html
+++ b/HTML/SQLManager/UpdateWithKeys.html
@@ -41,7 +41,7 @@
 <span class='modifier'>internal</span> <span class='commonType'>void</span> UpdateWithKeys(Province province, <span class="commonType">string</span> connectionString, <span class="commonType">string</span> providerName)
 {
   <span class='comment'>// Create the SQLManager.</span>
-  <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, "Province", connectionString
+  <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, <span class='text'>"Province"</span>, connectionString
     , providerName);
 
   <span class='comment'>// Change Values</span>
