--- a/HTML/SQLManager/SelectWithSQLManager.html
+++ b/HTML/SQLManager/SelectWithSQLManager.html
@@ -90,7 +90,7 @@ See the Technical Documentation for more information.</pre>
 <span class='modifier'>internal</span> <span class='refType'>class</span> <span class='userType'>Province</span>
 {
   <span class='xmlComment'>/// &lt;summary&gt;Gets or sets the Primary key value.&lt;/summary&gt;></span>
-  <span class='modifier'>public</span> <span class='commonType'>long</span> ID { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
+  <span class='modifier'>public</span> <span class='commonType'>int</span> ID { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
 
   <span class='xmlComment'>/// &lt;summary&gt;Gets or sets the Name.&lt;/summary&gt;></span>
   <span class='modifier'>public</span> <span class='commonType'>string</span> Name { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
