--- a/HTML/SQLManager/RetrieveWithSavedValues.html
+++ b/HTML/SQLManager/RetrieveWithSavedValues.html
@@ -27,8 +27,8 @@
     </div>
     <div class='Text'>
       <p>
-        How to Configure DataAccess with <a href="ConfigDataAccessWithBuilder.html">ConnectionBuilder</a>.</br />
-        How to Configure DataAccess with <a href="ConfigDataAccessWithConfigs.html">DataConfigs</a>.
+        How to Configure DataAccess with <a href="..\DataAccess\ConfigDataAccessWithBuilder.html">ConnectionBuilder</a>.</br />
+        How to Configure DataAccess with <a href="..\DataAccess\ConfigDataAccessWithConfigs.html">DataConfigs</a>.
       </p>
       <pre class="code">
 <span class='comment'>// Retrieve data using saved row values.</span>
