--- a/HTML/SQLManager/SelectWithSQLManager.html
+++ b/HTML/SQLManager/SelectWithSQLManager.html
@@ -45,6 +45,9 @@ Joins         (LJCDBMessageLib.DbJoins)   - Used to create "Join" clauses.
 The SQLManager class is similar to DataManager except SQLManager is a
 Client/Server only object whereas DataManager can do remote message based
 data access.
+
+SQLManager data methods return a DataTable and DataManager data
+methods return a DbResult message object.
 See the Technical Documentation for more information.</pre>
 
       <pre class="code">
