--- a/HTML/SQLManager/RetrieveWithSavedValues.html
+++ b/HTML/SQLManager/RetrieveWithSavedValues.html
@@ -32,9 +32,9 @@
       </p>
       <p>
         Important values such as key values can be saved in an LJCDataRow for
-        later retrieval with LJCDataRow methods LJCSetInt32(), LJCSetInt64()
-        and LJCSetString(). Each of these methods has a corresponding "Get"
-        method such as LJCGetString(), etc.
+        later retrieval with methods LJCSetInt32(), LJCSetInt64() and
+        LJCSetString(). Each of these methods has a corresponding "Get" method
+        such as LJCGetString(), etc.
       </p>
       <pre class="code">
 <span class='comment'>// Retrieve data using saved row values.</span>
