--- a/HTML/DataAccess/AddDataRowsToGrid.html
+++ b/HTML/DataAccess/AddDataRowsToGrid.html
@@ -37,7 +37,9 @@
 
       <h4>Load Grid Rows from Table</h4>
       <pre class="code">
+<span class='keyWord'>using</span> LJCDataAccess;
 <span class='keyWord'>using</span> LJCGridDataLib;
+<span class='keyWord'>using</span> LJCNetCommon;
 <span class='keyWord'>using</span> LJCWinFormControls;
 
 <span class='modifier'>internal</span> <span class='commonType'>void</span> DataRetrieve(<span class="userType">DataAccess</span> dataAccess, <span class='userType'>LJCDataGrid</span> ljcGrid)
