--- a/HTML/DataAccess/GetRowObject.html
+++ b/HTML/DataAccess/GetRowObject.html
@@ -35,6 +35,11 @@
         columns contain a unique key.
       </p>
       <pre class="code">
+<span class='keyWord'>using</span> LJCDataAccess;
+<span class='keyWord'>using</span> LJCDBMessage;
+<span class='keyWord'>using</span> LJCNetCommon;
+<span class='keyWord'>using</span> LJCWinFormControls;
+
 <span class='modifier'>internal</span> <span class='commonType'>void</span> GetRowDataObject(<span class="userType">DataAccess</span> dataAccess
   , <span class="userType">LJCGridRow</span> ljcGridRow)
 {
