--- a/HTML/SQLManager/SelectWithSQLManager.html
+++ b/HTML/SQLManager/SelectWithSQLManager.html
@@ -53,8 +53,7 @@ See the Technical Documentation for more information.</pre>
       <pre class="code">
 <span class='keyWord'>using</span> LJCDBClientLib;
 <span class='keyWord'>using</span> LJCDBMessage;
-<span class='keyWord'>using</span> LJCGridDataLib;
-<span class='keyWord'>using</span> LJCWinFormControls;
+<span class='keyWord'>using</span> LJCNetCommon;
 
 <span class='comment'>// Selecting data with the SQLManager object.</span>
 <span class='modifier'>internal</span> Province SelectWithSql(<span class="keyWord">string</span> connectionString, <span class="keyWord">string</span> providerName)
