--- a/HTML/SQLManager/RetrieveWithSavedValues.html
+++ b/HTML/SQLManager/RetrieveWithSavedValues.html
@@ -37,9 +37,14 @@
         such as LJCGetString(), etc.
       </p>
       <pre class="code">
+<span class='keyWord'>using</span> LJCDBClientLib;
+<span class='keyWord'>using</span> LJCDBMessage;
+<span class='keyWord'>using</span> LJCNetCommon;
+<span class='keyWord'>using</span> LJCWinFormControls;
+
 <span class='comment'>// Retrieve data using saved row values.</span>
 <span class='modifier'>internal</span> <span class='commonType'>void</span> RetrieveWithRowValues(LJCDataGrid ljcGrid
-, <span class='commonType'>string</span> connectionString, <span class='commonType'>string</span> providerName)
+  , <span class='commonType'>string</span> connectionString, <span class='commonType'>string</span> providerName)
 {
   <span class='comment'>// Create the SQLManager.</span>
   <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, <span class='text'>"Province"</span>, connectionString
