--- a/HTML/DataAccess/ConfigDataAccessWithBuilder.html
+++ b/HTML/DataAccess/ConfigDataAccessWithBuilder.html
@@ -162,6 +162,12 @@
     { "FMT", "Delimited" }
   };</pre>
     </div>
+    <div class="PathText">
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
+      / ConnectionStringBuilder
+    </div>
+    <br />
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
   </div>
