--- a/HTML/DataAccess/ConfigDataAccessWithConfigs.html
+++ b/HTML/DataAccess/ConfigDataAccessWithConfigs.html
@@ -113,6 +113,12 @@
   <span class='keyWord'>return</span> retValue;
 }</pre>
     </div>
+    <div class="PathText">
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
+      / DataConfigs
+    </div>
+    <br />
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
   </div>
