--- a/HTML/SQLManager/UpdateWithFilters.html
+++ b/HTML/SQLManager/UpdateWithFilters.html
@@ -62,6 +62,12 @@
   sqlManager.Update(province, <span class='keyWord'>null</span>, propertyNames, filters);
 }</pre>
     </div>
+    <div class="PathText">
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
+      / UpdateWithFilters
+    </div>
+    <br />
     <div class="SmallText">
       Copyright &copy Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
