--- a/HTML/SQLManager/UpdateWithKeys.html
+++ b/HTML/SQLManager/UpdateWithKeys.html
@@ -67,6 +67,12 @@ and column2 = "Something"</pre>
   sqlManager.Update(province, keyColumns, propertyNames);
 }</pre>
     </div>
+    <div class="PathText">
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
+      / UpdateWithKeys
+    </div>
+    <br />
   <div class="SmallText">
     Copyright &copy Lester J. Clark and Contributors.<br />
     Licensed under the MIT License.
