--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -4,7 +4,7 @@
 <!-- Tutorials.html -->
 <html lang='en' xmlns='http://www.w3.org/1999/xhtml'>
 <head>
-  <title>LJC Tutorials</title>
+  <title>LJC Code Examples</title>
   <meta charset='utf-8' />
   <meta name="description" content="LJC C# CodeDoc">
   <meta name="keywords" content="LJC, C#, Code, Documentation">
@@ -21,7 +21,7 @@
     </div>
     <br />
     <div id='Header'>
-      <div id='Title'>LJC Tutorials</div>
+      <div id='Title'>LJC Code Examples</div>
     </div>
     <div class='Text'>
       <h4>General Topics</h4>
@@ -53,8 +53,14 @@
 
       <h4>SQLManager</h4>
       <p>
-        How to select data using
-        <a href="SQLManager/SelectWithSQLManager.html">SQLManager</a>.
+        How to <a href="SQLManager/Add.html">Add</a> a data record.
+      </p>
+      <p>
+        How to <a href="SQLManager/Retrieve.html">Retrieve</a> a data record.
+      </p>
+      <p>
+        How to retrieve data using
+        <a href="SQLManager/RetrieveWithRowValues.html">Row Saved Values</a>.
       </p>
       <p>
         How to update data using
@@ -63,10 +69,6 @@
       <p>
         How to update data using
         <a href="SQLManager/UpdateWithFilters.html">Filters</a>.
-      </p>
-      <p>
-        How to retrieve data using
-        <a href="SQLManager/RetrieveWithSavedValues.html">Row Saved Values</a>.
       </p>
     </div>
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
