--- a/HTML/SQLManager/Add.html
+++ b/HTML/SQLManager/Add.html
@@ -19,7 +19,7 @@
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html">HowTo</a>
-      / AddRecorrd
+      / AddRecord
     </div>
     <br />
     <div id='Header'>
