--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -56,6 +56,9 @@
         How to <a href="SQLManager/Add.html">Add</a> a data record.
       </p>
       <p>
+        How to <a href="SQLManager/Delete.html">Delete</a> a data record.
+      </p>
+      <p>
         How to <a href="SQLManager/Retrieve.html">Retrieve</a> a data record.
       </p>
       <p>
