--- a/HTML/SQLManager/Delete.html
+++ b/HTML/SQLManager/Delete.html
@@ -31,13 +31,13 @@
 <span class='modifier'>internal</span> <span class='commonType'>void</span> Delete(string connectionString, <span class='commonType'>string</span> providerName)
 {
   <span class='comment'>// Create the SQLManager.</span>
-  <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, "Province", connectionString
+  <span class='commonType'>var</span> sqlManager = <span class='keyWord'>new</span> <span class='userType'>SQLManager</span>(null, <span class='text'>"Province"</span>, connectionString
     , providerName);
 
   <span class='comment'>// Identify the records to be deleted.</span>
   <span class='commonType'>var</span> keyColumns = <span class='keyWord'>new</span> <span class='userType'>DbColumns</span>()
   {
-    { "ID" , 1 }
+    { <span class='text'>"ID"</span> , 1 }
   };
 
   <span class='comment'>// Perform the Delete</span>
