--- a/HTML/DataAccess/AddDataRowsToGrid.html
+++ b/HTML/DataAccess/AddDataRowsToGrid.html
@@ -94,6 +94,12 @@
   }
 }</pre>
     </div>
+    <div class="PathText">
+      / <a href="../../index.html">Home</a>
+      / <a href="../Tutorials.html">HowTo</a>
+      / AddGridDataRows
+    </div>
+    <br />
     <div class="SmallText">
       Copyright &copy Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
