--- a/HTML/SQLManager/Add.html
+++ b/HTML/SQLManager/Add.html
@@ -26,6 +26,10 @@
       <div id='Title'>How to Add a Data Record</div>
     </div>
     <div class='Text'>
+      <p>
+        How to Configure DataAccess with <a href="..\DataAccess\ConfigDataAccessWithBuilder.html">ConnectionBuilder</a>.</br />
+        How to Configure DataAccess with <a href="..\DataAccess\ConfigDataAccessWithConfigs.html">DataConfigs</a>.
+      </p>
   <pre class="code">
 <span class='comment'>// Add a data record.</span>
 <span class='modifier'>internal</span> Province Add(Province provider, <span class='commonType'>string</span> connectionString
