--- a/HTML/SQLManager/Delete.html
+++ b/HTML/SQLManager/Delete.html
@@ -26,6 +26,10 @@
       <div id='Title'>How to Delete a Data Record</div>
     </div>
     <div class='Text'>
+      <p>
+        How to Configure DataAccess with <a href="..\DataAccess\ConfigDataAccessWithBuilder.html">ConnectionBuilder</a>.</br />
+        How to Configure DataAccess with <a href="..\DataAccess\ConfigDataAccessWithConfigs.html">DataConfigs</a>.
+      </p>
       <pre class="code">
 <span class='comment'>// Delete a data record.</span>
 <span class='modifier'>internal</span> <span class='commonType'>void</span> Delete(string connectionString, <span class='commonType'>string</span> providerName)
